add basic API and display functionality
- make backend code to fetch data from weather API

- Make basic frontend code to display data from API

--- a/src/template.html
+++ b/src/template.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title><%= htmlWebpackPlugin.options.title %></title>
+    </head>
+    <body>
+        <header>
+            <h1>Weather App</h1>
+        </header>
+        <div class="main">
+            <form>
+                <input type="search" name="search" id="search" />
+                <button type="submit" id="btnSearch">Search</button>
+            </form>
+            <div class="location" id="divLocation"></div>
+            <div class="weather">
+                <div class="dayContainer" id="day1"></div>
+                <div class="dayContainer" id="day2"></div>
+                <div class="dayContainer" id="day3"></div>
+            </div>
+        </div>
+    </body>
 </html>
